src/parser/file/snapshots/pdf2docx__parser__file__tests__empty.snap
---
source: src/parser/file/tests.rs
expression: parse_xref_table(buf.as_ref()).unwrap()
---
(
    [],
    Section {
        entries: {},
    },
)
