src/parser/file/snapshots/pdf2docx__parser__file__tests__parse_frame.snap
---
source: src/parser/file/tests.rs
expression: "parse_frame(b\"xref\n1 2\n0000000000 00000 n\n0000000010 00000 n\ntrailer\n<< /Size 1 >>\nstartxref\n1234\n%%EOF\n\").unwrap()"
---
(
    [],
    Frame {
        xref_pos: 1234,
        trailer: {
            Name(
                [
                    47,
                    83,
                    105,
                    122,
                    101,
                ],
            ): Integer(
                1,
            ),
        },
        xref_section: {
            1: Entry(
                0,
                0,
                true,
            ),
            2: Entry(
                10,
                0,
                true,
            ),
        },
    },
)
