src/parser/file/snapshots/pdf2docx__parser__file__tests__parse_frame_set.snap
---
source: src/parser/file/tests.rs
expression: "parse_frame_set(b\"%PDF-1.7\nxref\n1 1\n0000000000 00000 n\ntrailer\n<< /Size 1 >>\nstartxref\n9\n%%EOF\nxref\n1 1\n0000000000 00000 n\ntrailer\n<< /Prev 9 >>\nstartxref\n77\n%%EOF\n\").unwrap()"
---
(
    [],
    [
        Frame {
            xref_pos: 77,
            trailer: {
                Name(
                    [
                        47,
                        80,
                        114,
                        101,
                        118,
                    ],
                ): Integer(
                    9,
                ),
            },
            xref_section: {
                1: Entry(
                    0,
                    0,
                    true,
                ),
            },
        },
        Frame {
            xref_pos: 9,
            trailer: {
                Name(
                    [
                        47,
                        83,
                        105,
                        122,
                        101,
                    ],
                ): Integer(
                    1,
                ),
            },
            xref_section: {
                1: Entry(
                    0,
                    0,
                    true,
                ),
            },
        },
    ],
)
