src/parser/file/snapshots/pdf2docx__parser__file__tests__parse_trailer.snap
---
source: src/parser/file/tests.rs
expression: parse_trailer(buf).unwrap()
---
(
    [
        115,
        116,
        97,
        114,
        116,
        120,
        114,
        101,
        102,
        10,
        49,
        50,
        51,
        52,
        10,
        37,
        37,
        69,
        79,
        70,
    ],
    {
        Name(
            [
                83,
                105,
                122,
                101,
            ],
        ): Integer(
            1,
        ),
    },
)
