src/parser/file/snapshots/pdf2docx__parser__file__tests__parse_xref_table-2.snap
---
source: src/parser/file/tests.rs
expression: parse_xref_table(buf.as_ref()).unwrap()
---
(
    [],
    XRefTable {
        entries: {
            1: XRefEntry(
                0,
                0,
                true,
            ),
            2: XRefEntry(
                10,
                0,
                true,
            ),
        },
    },
)
