src/parser/file/snapshots/pdf2docx__parser__file__tests__parse_xref_table.snap
---
source: src/parser/file/tests.rs
expression: parse_xref_table(buf.as_ref()).unwrap()
---
(
    [],
    XRefTable {
        entries: {},
    },
)
