src/parser/file/snapshots/pdf2docx__parser__file__tests__two entries.snap
---
source: src/parser/file/tests.rs
expression: parse_xref_table(buf.as_ref()).unwrap()
---
(
    [],
    {
        1: Entry(
            0,
            0,
            true,
        ),
        2: Entry(
            10,
            0,
            true,
        ),
    },
)
